# ROS2-test-development

./: .gitignore  build.sh  commands.txt  frames_2026-03-13_10.40.04.gv  frames_2026-03-13_17.23.25.gv
.devcontainer/: Dockerfile  devcontainer.json
config/: params.yaml
src/: ros2.repos
src/car_square/: CMakeLists.txt  package.xml
src/car_square/config/: config.rviz  params.yaml  robot_controller.yaml  world.sdf
src/car_square/launch/: clear.launch.py  sim.launch.py
src/car_square/model/: gazebo.xacro  model.xacro  model_simu.xacro  parameters.xacro
src/car_square/model/wheels/: omni_wheel.urdf.xacro  omni_wheel_temp.urdf.xacro
src/car_square/src/: car_controller.cpp  joint_states_exporter.cpp
src/micro_ros_hardware/: CMakeLists.txt  micro_ros_hardware.xml  package.xml
src/micro_ros_hardware/include/micro_ros_hardware/: micro_ros_hardware_interface.hpp
src/micro_ros_hardware/src/: micro_ros_hardware_interface.cpp
src/robot_messages/: CMakeLists.txt  package.xml
src/robot_messages/msg/: TargetPosition.msg  WheelsCommand.msg
