<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>micro_ros_hardware</name>
  <version>0.1.0</version>
  <description>
    Hardware interface ros2_control pour bridge avec ESP32 via micro-ROS.
    Publie les commandes de vitesse sur /wheel_commands et
    souscrit aux encodeurs sur /esp32/joint_states.
  </description>
  <maintainer email="you@example.com">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>sensor_msgs</depend>
  <depend>robot_messages</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>